--- a/StudyEnglish.csproj
+++ b/StudyEnglish.csproj
@@ -76,16 +76,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="FinalForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FinalForm.Designer.cs">
+      <DependentUpon>FinalForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FullLettersBoard.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FullLettersBoard.Designer.cs">
+      <DependentUpon>FullLettersBoard.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="FinalForm.resx">
+      <DependentUpon>FinalForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FullLettersBoard.resx">
+      <DependentUpon>FullLettersBoard.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -275,6 +284,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\v_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\YouGotThis.gif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
